Completes bower and messages requirements

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,10 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
     </div>
+    <input id="message" type="text">
+    <button id="sendMessage">Send</button>
+    <div class="chat"></div>
+    <div id="roomnames"></div>
   </body>
 </html>
