Completes room addition requirements

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,8 @@
     <input id="message" type="text">
     <button id="sendMessage">Send</button>
     <div class="chat"></div>
+    <input id="roomNameInput" type="text">
+    <button id="addRoomName">Add Room Name</button>
     <div id="roomnames"></div>
   </body>
 </html>
