Creates initial Backbone.js setup

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/models.js"></script>
+    <script src="scripts/views.js"></script>
   </head>
   <body>
     <div id="main">
